--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <ul class="menu">
                 <li><a href="#" target="_blank">skills</a></li>
                 <li><a href="#portfoili">Portfolio</a> </li>
-                <li><a href="./startbootstrap-resume-gh-pages/index.html" target="_blank">about me</a>
-                <li><a href="indexcaffee.html" target="_blank">Contact</a> </li>
+                <li><a href="./src/test-resume/resume.html" target="_blank">about me</a>
+                <li><a href="./src/indexcaffee.html" target="_blank">Contact</a> </li>
                 <li><a href="#socialmedia">social media</a></li>
             </ul>
         </section>
@@ -64,10 +64,11 @@
         </div>
         <div class="media-link">
             <a href="#"><i class="fa-brands fa-2xl fa-twitter " style="color: rgb(29,155,240);"></i></a>
-                <!-- <a href="#"><i class="fa-brands  fa-2xl fa-instagram "></i></a> -->
-                <a href="#"><i class="fa-brands fa-2xl fa-linkedin " style="color: rgb(10,102,194);"></i></a>
-                <a href="#"><i class="fa-brands fa-2xl fa-facebook" style="color: rgb(23,119,242);"></i></a>
-                <a href="#"><i class="fa-brands fa-2xl fa-square-github" style="color: rgb(36,41,47); z-index: 3; opacity: 1;"></i></a>
+            <!-- <a href="#"><i class="fa-brands  fa-2xl fa-instagram "></i></a> -->
+            <a href="#"><i class="fa-brands fa-2xl fa-linkedin " style="color: rgb(10,102,194);"></i></a>
+            <a href="#"><i class="fa-brands fa-2xl fa-facebook" style="color: rgb(23,119,242);"></i></a>
+            <a href="#"><i class="fa-brands fa-2xl fa-square-github"
+                    style="color: rgb(36,41,47); z-index: 3; opacity: 1;"></i></a>
         </div>
     </div>
     <!-- middle page ended -->
@@ -116,71 +117,77 @@
 
     <!-- portfolio section started -->
     <div class="container2">
-        <h1 style="color: #fff; position: relative; left: 45%; top: 35px; font-size: 5rem;">Portfolio</h1>
-        <div class="iframebox1">
-            <span class="text"> <a href="./startbootstrap-resume-gh-pages/index.html">resume,bootstrap</a>
-                <div class="iframe-preview">
-                    <iframe src="./startbootstrap-resume-gh-pages/index.html" style="border:0px #FFFFFF none;"
-                        name="test" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="2000px"
-                        width="1000px"></iframe>
-                </div>
-            </span>
-        </div>
-        <div class="iframebox2">
-            <span class="text"> <a href="light-index.html"> animation-java</a>
-                <div class="iframe-preview">
-                    <iframe src="./src/light-index.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
-                        frameborder="0" marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
-                </div>
-            </span>
-        </div>
-        <div class="iframebox3">
-            <span class="text"> <a href="./src/animationcomingsoon.html">animation+css</a>
+        <h1 style="color: #fff;">Portfolio</h1>
+        <div class="main-container">
+            <div class="iframebox1">
+                <span class="text"><a href="./startbootstrap-resume-gh-pages/index.html">C.V</a>
+                    <div class="iframe-preview">
+                        <iframe src="./startbootstrap-resume-gh-pages/index.html" style="border:0px #FFFFFF none;"
+                            name="test" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px"
+                            height="2000px" width="1000px"></iframe>
+                    </div>
+                </span>
+            </div>
+            <div class="iframebox2">
+                <span class="text"> <a href="light-index.html"> animation</a>
+                    <div class="iframe-preview">
+                        <iframe src="./src/light-index.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
+                            frameborder="0" marginheight="0px" marginwidth="0px" height="2000px"
+                            width="1000px"></iframe>
+                    </div>
+                </span>
+            </div>
+            <div class="iframebox3">
+                <span class="text"> <a href="./src/animationcomingsoon.html">animation</a>
 
 
-                <div class="iframe-preview">
-                    <iframe src="./src/animationcomingsoon.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
-                        frameborder="0" marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
-                </div>
-            </span>
-        </div>
-        <div class="iframebox4">
-            <span class="text"> <a href=" uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html">short
-                    project</a>
+                    <div class="iframe-preview">
+                        <iframe src="./src/animationcomingsoon.html" style="border:0px #FFFFFF none;" name="test"
+                            scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="2000px"
+                            width="1000px"></iframe>
+                    </div>
+                </span>
+            </div>
+            <div class="iframebox4">
+                <span class="text"> <a
+                        href=" uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html">
+                        project</a>
 
 
-                <div class="iframe-preview">
-                    <iframe src="./uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html"
-                        style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0" marginheight="0px"
-                        marginwidth="0px" height="2000px" width="1000px"></iframe>
-                </div>
-            </span>
-        </div>
-        <div class="iframebox5">
-            <span class="text"> <a href="uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html">short
-                    oroject</a>
+                    <div class="iframe-preview">
+                        <iframe src="./uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html"
+                            style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
+                            marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
+                    </div>
+                </span>
+            </div>
+            <div class="iframebox5">
+                <span class="text">
+                    <a href="uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html">
+                        oroject</a>
 
 
-                <div class="iframe-preview">
-                    <iframe src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/"
-                        style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0" marginheight="0px"
-                        marginwidth="0px" height="2000px" width="1000px"></iframe>
-                </div>
-            </span>
-        </div>
-        <div class="iframebox6">
-            <span class="text"> <a
-                    href="www.proquest.com/openview/5ec07a7ae99b56816e8e8071e17dbac7/1?pq-origsite=gscholar&cbl=2026366&diss=y">article</a>
+                    <div class="iframe-preview">
+                        <iframe src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/"
+                            style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
+                            marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
+                    </div>
+                </span>
+            </div>
+            <div class="iframebox6">
+                <span class="text"> <a
+                        href="www.proquest.com/openview/5ec07a7ae99b56816e8e8071e17dbac7/1?pq-origsite=gscholar&cbl=2026366&diss=y">article</a>
 
 
-                <div class="iframe-preview">
-                    <iframe
-                        src="https://www.proquest.com/openview/5ec07a7ae99b56816e8e8071e17dbac7/1?pq-origsite=gscholar&cbl=2026366&diss=y"
-                        style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0" marginheight="0px"
-                        marginwidth="0px" height="2000px" width="1000px"></iframe>
-                </div>
-            </span>
+                    <div class="iframe-preview">
+                        <iframe
+                            src="https://www.proquest.com/openview/5ec07a7ae99b56816e8e8071e17dbac7/1?pq-origsite=gscholar&cbl=2026366&diss=y"
+                            style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
+                            marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
+                    </div>
+                </span>
 
+            </div>
         </div>
     </div>
     <!-- portfolio section is ended  -->
