--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             </div>
             <div class="iframebox4">
                 <span class="text"> <a
-                        href=" uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html">
+                        href="/uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html">
                         project</a>
 
 
                     <div class="iframe-preview">
-                        <iframe src="./uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html"
+                        <iframe src="/uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html"
                             style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
                             marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                     </div>
@@ -163,12 +163,12 @@
             </div>
             <div class="iframebox5">
                 <span class="text">
-                    <a href="uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html">
+                    <a href="/uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html">
                         oroject</a>
 
 
                     <div class="iframe-preview">
-                        <iframe src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/"
+                        <iframe src="/uibRepository/uib-layout-magazine-landing-page-Aliramazanian/"
                             style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
                             marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                     </div>
