--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                 </span>
             </div>
-            <div class="iframebox4">
+            <!-- <div class="iframebox4">
                 <span class="text"> <a
                         href="uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html">
                         project</a>
@@ -160,8 +160,8 @@
                             marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                     </div>
                 </span>
-            </div>
-            <div class="iframebox5">
+            </div> -->
+            <!-- <div class="iframebox5">
                 <span class="text">
                     <a href="uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html">
                         oroject</a>
@@ -173,7 +173,7 @@
                             marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                     </div>
                 </span>
-            </div>
+            </div> -->
             <div class="iframebox6">
                 <span class="text"> <a
                         href="www.proquest.com/openview/5ec07a7ae99b56816e8e8071e17dbac7/1?pq-origsite=gscholar&cbl=2026366&diss=y">article</a>
