--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/906ae66076.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="rainmaimation2.css">
 </head>
 
 <body>
@@ -29,21 +30,92 @@
                 <li><a href="#socialmedia">social media</a></li>
             </ul>
         </section>
-        <div class="header-pic">
-
+        <div class="container5">
+            <div class="bubble">
+                <span style="--i:11;"></span>
+                <span style="--i:12;"></span>
+                <span style="--i:24;"></span>
+                <span style="--i:10;"></span>
+                <span style="--i:14;"></span>
+                <span style="--i:23;"></span>
+                <span style="--i:18;"></span>
+                <span style="--i:16;"></span>
+                <span style="--i:19;"></span>
+                <span style="--i:20;"></span>
+                <span style="--i:22;"></span>
+                <span style="--i:25;"></span>
+                <span style="--i:18;"></span>
+                <span style="--i:21;"></span>
+                <span style="--i:15;"></span>
+                <span style="--i:13;"></span>
+                <span style="--i:26;"></span>
+                <span style="--i:27;"></span>
+                <span style="--i:13;"></span>
+                <span style="--i:28;"></span>
+                <span style="--i:11;"></span>
+                <span style="--i:12;"></span>
+                <span style="--i:24;"></span>
+                <span style="--i:10;"></span>
+                <span style="--i:14;"></span>
+                <span style="--i:23;"></span>
+                <span style="--i:18;"></span>
+                <span style="--i:16;"></span>
+                <span style="--i:19;"></span>
+                <span style="--i:20;"></span>
+                <span style="--i:22;"></span>
+                <span style="--i:25;"></span>
+                <span style="--i:18;"></span>
+                <span style="--i:21;"></span>
+                <span style="--i:15;"></span>
+                <span style="--i:13;"></span>
+                <span style="--i:26;"></span>
+                <span style="--i:27;"></span>
+                <span style="--i:13;"></span>
+                <span style="--i:28;"></span>
+                <span style="--i:11;"></span>
+                <span style="--i:12;"></span>
+                <span style="--i:24;"></span>
+                <span style="--i:10;"></span>
+                <span style="--i:14;"></span>
+                <span style="--i:23;"></span>
+                <span style="--i:18;"></span>
+                <span style="--i:16;"></span>
+                <span style="--i:19;"></span>
+                <span style="--i:20;"></span>
+                <span style="--i:22;"></span>
+                <span style="--i:25;"></span>
+                <span style="--i:18;"></span>
+                <span style="--i:21;"></span>
+                <span style="--i:15;"></span>
+                <span style="--i:13;"></span>
+                <span style="--i:26;"></span>
+                <span style="--i:27;"></span>
+                <span style="--i:13;"></span>
+                <span style="--i:28;"></span>
+            </div>
+                
+            <div class="g-container">
+                <div class="word">my name is ali</div>
+                <div class="word">i'm a Desiner and and a new Webdeveloper</div>
+                <div class="word">i am growing up in DCI</div>
+             </div>
+            <!-- <p>
+                my name is ali</p>
+            <span>
+                i'm a Desiner and and a new Webdeveloper
+            </span> -->
+        </div>
+        <!-- <div class="header-pic">
         </div>
         <div class="text-header">
 
             <h1>My Portfolio</h1>
             <span>i'm a Desiner and speaker who is intersted in the ethics of all</span>
-
-
-        </div>
-
+        </div> -->
     </header>
     <!-- header ended -->
 
-
+  
 
     <!-- middle-page started -->
     <div class="middle-page">
@@ -201,7 +273,7 @@
 
     <!-- footer section  -->
     <footer>
-        <span>copyright &#169; 2022- frelancer</span>
+        <h3>copyright &#169; 2022- frelancer</h3>
     </footer>
 
 
