--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/906ae66076.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="rainmaimation2.css">
+    <link rel="stylesheet" href="/src/light-style.css">
 </head>
 
 <body>
@@ -93,18 +94,45 @@
                 <span style="--i:13;"></span>
                 <span style="--i:28;"></span>
             </div>
-                
-            <div class="g-container">
+            <div>
+                <p class="item-1">This is your last chance. After this, there is no turning back.</p>
+                <p class="item-2">You take the blue pill - the story ends, you wake up in your bed and believe whatever
+                    you want
+                    to believe.</p>
+                <p class="item-3">You take the red pill - you stay in Wonderland and I show you how deep the rabbit-hole
+                    goes.
+                </p>
+            </div>
+          
+            <div class="container5">
+                <div class="pic-main-face"> </div>
+                <div class="social-media" id="socialmedia">
+                    <div class="media-link">
+                        <div> <a href="https://twitter.com/alidarza52?t=1mX2nPqDZBR0_yrf7bbtJA&s=35"><i
+                                    class="fa-brands fa-2xl fa-twitter  twitter2"
+                                    style="color: rgb(29,155,240);"></i></a></div>
+                        <div><a href="https://www.linkedin.com/feed/"><i class="fa-brands fa-2xl fa-linkedin "
+                                    style="color: rgb(10,102,194);"></i></a> </div>
+                        <div><a href="https://www.facebook.com"><i class="fa-brands fa-2xl fa-facebook"
+                                    style="color: rgb(23,119,242);"></i></a></div>
+                        <div><a href="https://github.com/Aliramazanian"><i class="fa-brands fa-2xl fa-square-github"
+                                    style="color: rgb(36,41,47); z-index: 3; opacity: 1;"></i></a></div>
+                    </div>
+                </div>
+
+            </div>
+            </div>
+            <!-- <div class="g-container">
                 <div class="word">my name is ali</div>
                 <div class="word">i'm a Desiner and and a new Webdeveloper</div>
                 <div class="word">i am growing up in DCI</div>
-             </div>
+             </div> -->
             <!-- <p>
                 my name is ali</p>
             <span>
                 i'm a Desiner and and a new Webdeveloper
             </span> -->
-        </div>
+        </header>
         <!-- <div class="header-pic">
         </div>
         <div class="text-header">
@@ -115,7 +143,7 @@
     </header>
     <!-- header ended -->
 
-  
+
 
     <!-- middle-page started -->
     <div class="middle-page">
