--- a/src/light-index.html
+++ b/src/light-index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <header>
+
+  
     <section class="top-nav">
         <div>
             My Portfolio
@@ -28,99 +31,95 @@
             <li><a href="#socialmedia">social media</a></li>
         </ul>
     </section>
-   
-        <div class="bubble">
-            <span style="--i:11;"></span>
-            <span style="--i:12;"></span>
-            <span style="--i:24;"></span>
-            <span style="--i:10;"></span>
-            <span style="--i:14;"></span>
-            <span style="--i:23;"></span>
-            <span style="--i:18;"></span>
-            <span style="--i:16;"></span>
-            <span style="--i:19;"></span>
-            <span style="--i:20;"></span>
-            <span style="--i:22;"></span>
-            <span style="--i:25;"></span>
-            <span style="--i:18;"></span>
-            <span style="--i:21;"></span>
-            <span style="--i:15;"></span>
-            <span style="--i:13;"></span>
-            <span style="--i:26;"></span>
-            <span style="--i:27;"></span>
-            <span style="--i:13;"></span>
-            <span style="--i:28;"></span>
-            <span style="--i:11;"></span>
-            <span style="--i:12;"></span>
-            <span style="--i:24;"></span>
-            <span style="--i:10;"></span>
-            <span style="--i:14;"></span>
-            <span style="--i:23;"></span>
-            <span style="--i:18;"></span>
-            <span style="--i:16;"></span>
-            <span style="--i:19;"></span>
-            <span style="--i:20;"></span>
-            <span style="--i:22;"></span>
-            <span style="--i:25;"></span>
-            <span style="--i:18;"></span>
-            <span style="--i:21;"></span>
-            <span style="--i:15;"></span>
-            <span style="--i:13;"></span>
-            <span style="--i:26;"></span>
-            <span style="--i:27;"></span>
-            <span style="--i:13;"></span>
-            <span style="--i:28;"></span>
-            <span style="--i:11;"></span>
-            <span style="--i:12;"></span>
-            <span style="--i:24;"></span>
-            <span style="--i:10;"></span>
-            <span style="--i:14;"></span>
-            <span style="--i:23;"></span>
-            <span style="--i:18;"></span>
-            <span style="--i:16;"></span>
-            <span style="--i:19;"></span>
-            <span style="--i:20;"></span>
-            <span style="--i:22;"></span>
-            <span style="--i:25;"></span>
-            <span style="--i:18;"></span>
-            <span style="--i:21;"></span>
-            <span style="--i:15;"></span>
-            <span style="--i:13;"></span>
-            <span style="--i:26;"></span>
-            <span style="--i:27;"></span>
-            <span style="--i:13;"></span>
-            <span style="--i:28;"></span>
-            <span style="--i:11;"></span>
-            <span style="--i:12;"></span>
-            <span style="--i:24;"></span>
-            <span style="--i:10;"></span>
-            <span style="--i:14;"></span>
-            <span style="--i:23;"></span>
-            <span style="--i:18;"></span>
-            <span style="--i:16;"></span>
-            <span style="--i:19;"></span>
-            <span style="--i:20;"></span>
-            <span style="--i:22;"></span>
-            <span style="--i:25;"></span>
-            <span style="--i:18;"></span>
-            <span style="--i:21;"></span>
-            <span style="--i:15;"></span>
-            <span style="--i:13;"></span>
-            <span style="--i:26;"></span>
-            <span style="--i:27;"></span>
-            <span style="--i:13;"></span>
-            <span style="--i:28;"></span>
-        </div>
-        <div> 
-        <p class="item-1">This is your last chance. After this, there is no turning back.</p>
-        <p class="item-2">You take the blue pill - the story ends, you wake up in your bed and believe whatever you want to believe.</p>
-        <p class="item-3">You take the red pill - you stay in Wonderland and I show you how deep the rabbit-hole goes.</p>
-    <!-- <div class="g-container">
-        <div class="word">my name is ali</div>
-        <div class="word">i'm a Desiner and and a new Webdeveloper</div>
-        <div class="word">i am growing up at DCI</div> -->
+
+    <div class="bubble">
+        <span style="--i:11;"></span>
+        <span style="--i:12;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:24;"></i></span>
+        <span style="--i:10;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:14;"></span>
+        <span style="--i:23;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:18;"></span>
+        <span style="--i:16;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:19;"></span>
+        <span style="--i:20;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:22;"></span>
+        <span style="--i:25;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:18;"></span>
+        <span style="--i:21;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:15;"></span>
+        <span style="--i:13;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:26;"></span>
+        <span style="--i:27;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:13;"></span>
+        <span style="--i:28;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:11;"></span>
+        <span style="--i:12;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:24;"></span>
+        <span style="--i:10;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:14;"></span>
+        <span style="--i:23;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:18;"></span>
+        <span style="--i:16;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:19;"></span>
+        <span style="--i:20;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:22;"></span>
+        <span style="--i:25;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:18;"></span>
+        <span style="--i:21;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:15;"></span>
+        <span style="--i:13;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:26;"></span>
+        <span style="--i:27;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:13;"></span>
+        <span style="--i:28;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:11;"></span>
+        <span style="--i:12;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:24;"></span>
+        <span style="--i:10;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:14;"></span>
+        <span style="--i:23;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:18;"></span>
+        <span style="--i:16;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:19;"></span>
+        <span style="--i:20;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:22;"></span>
+        <span style="--i:25;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:18;"></span>
+        <span style="--i:21;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:15;"></span>
+        <span style="--i:13;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:26;"></span>
+        <span style="--i:27;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:13;"></span>
+        <span style="--i:28;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:11;"></span>
+        <span style="--i:12;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:24;"></span>
+        <span style="--i:10;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:14;"></span>
+        <span style="--i:23;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:18;"></span>
+        <span style="--i:16;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:19;"></span>
+        <span style="--i:20;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:22;"></span>
+        <span style="--i:25;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:18;"></span>
+        <span style="--i:21;"><i class="fa-brands fa-js"></i></span>
+        <span style="--i:15;"></span>
+        <span style="--i:13;"><i class="fa-brands fa-html5"></i></span>
+        <span style="--i:26;"></span>
+        <span style="--i:27;"><i class="fa-brands fa-css3-alt"></i></span>
+        <span style="--i:13;"></span>
+        <span style="--i:28;"><i class="fa-brands fa-js"></i></span>
     </div>
-        <div class="container5">
+    <div id="headertittle">
+        <p class="item-1">My nam is ali</p>
+        <p class="item-2"> i am a new designer and programer</p>
+        <p class="item-3">i am lerning html, css and javascript </p>
+    </div>
+    <div class="container5">
         <div class="pic-main-face"> </div>
         <div class="social-media" id="socialmedia">
 
@@ -135,24 +134,20 @@
                             style="color: rgb(36,41,47); z-index: 3; opacity: 1;"></i></a></div>
             </div>
         </div>
-        
+
     </div>
-    <div class="your-container">
-        <svg class="css-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
-            <defs>
-                <path id="wave-pattern" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z">
-                </path>
-            </defs>
-            <g class="animated-waves">
-                <use href="#wave-pattern" x="0" y="0" fill="rgba(23,44,114,0.7"></use>
-                <use href="#wave-pattern" x="0" y="3" fill="rgba(90,98,156,0.5)"></use>
-                <use href="#wave-pattern" x="0" y="5" fill="rgba(230,232,241,0.3)"></use>
-                <use href="#wave-pattern" x="0" y="7" fill="rgba(220,222,234,0.3)"></use>
-            </g>
-        </svg>
-    </div>
-    
+
+</header>
+<div class="middle-page">
+    <h2 class="tittle-middle-page">we've got what you need</h2>
+    <br>
+
+    <div class="underline"></div>
+    <br>
+    <p class="tittle-middle-page">
+        You need </p><br>
+    <button class="button-middle-page"><a href="serviceanimation.html">get start</a> </button>
+</div>
 </body>
 
 </html>
