--- a/index.html
+++ b/index.html
@@ -149,9 +149,12 @@
         <button class="button-middle-page"><a href="/src/serviceanimation.html">get start</a> </button>
     </div>
 
+
+    <!-- Curriculum vitae section  -->
+
     <div class="Curriculum-vitae">
         <div class="items1">
-            <a href="#" id="skills" style="font-size: 3.5rem; font-weight: 700; ">skills</a>
+            <a href="#" id="skills" style="font-size: 3.5rem; font-weight: 700;  text-align: center;">skills</a>
         </div>
         <div class="items2">
 
@@ -172,8 +175,9 @@
                 high-performing and quickly delivered website.</p>
         </div>
         <div class="items4">
-            <img src="/asset/seo.jpg" style="width: 200px; height: 150px; margin-top: 30px; " alt="">
-            <h3 style="color: #000; font-size: 1.8rem; ;">SEO</h3>
+            <img class="vitaepic" src="/asset/seo.jpg" alt="">
+            
+            <h3  style="color: #000; font-size: 1.8rem; ;">SEO</h3>
             <p style="color: #000; font-size: 1.5rem; ">
                 We offer customised SEO training to ensure your website is rising
                 the ranks in google and staying at the top.</p>
