--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
         </div>
         <div class="items4">
             <img class="vitaepic" src="/asset/seo.jpg" alt="">
-            
-            <h3  style="color: #000; font-size: 1.8rem; ;">SEO</h3>
+
+            <h3 style="color: #000; font-size: 1.8rem; ;">SEO</h3>
             <p style="color: #000; font-size: 1.5rem; ">
                 We offer customised SEO training to ensure your website is rising
                 the ranks in google and staying at the top.</p>
@@ -192,43 +192,39 @@
                 style="font-size: 3.5rem; font-weight: 700; color: #fff; text-decoration: none;">Portfolio</a></h1>
         <div class="main-container">
             <div class="iframebox1">
-                <span class="text"><a
-                        href="/uibRepository/uib-frameworks-responsive-bootstrap-webpage-Aliramazanian/index.html">C.V</a>
+                <span class="text"><a href="/uibRepository/frameworks-responsive-bootstrap-webpage/index.html">C.V</a>
                     <div class="iframe-preview">
-                        <iframe
-                            src="/uibRepository/uib-frameworks-responsive-bootstrap-webpage-Aliramazanian/index.html"
+                        <iframe src="/uibRepository/frameworks-responsive-bootstrap-webpage/index.html"
                             style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
                             marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                     </div>
                 </span>
             </div>
             <div class="iframebox2">
-                <span class="text"> <a href="/uibRepository/uib-layout-grid-document-layout-Aliramazanian/index.html">
+                <span class="text"> <a href="/uibRepository/framework-bootstrap/index.html">
                         animation</a>
                     <div class="iframe-preview">
-                        <iframe src="/uibRepository/uib-layout-grid-document-layout-Aliramazanian/index.html"
-                            style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
-                            marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
+                        <iframe src="/uibRepository/framework-bootstrap/index.html" style="border:0px #FFFFFF none;"
+                            name="test" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px"
+                            height="2000px" width="1000px"></iframe>
                     </div>
                 </span>
             </div>
             <div class="iframebox3">
-                <span class="text"> <a
-                        href="/uibRepository/uib-framework-bootstrap-Aliramazanian/index.html">animation</a>
+                <span class="text"> <a href="/uibRepository/layout-grid-document-layout/index.html">animation</a>
 
 
                     <div class="iframe-preview">
-                        <iframe src="/uibRepository/uib-framework-bootstrap-Aliramazanian/index.html"
+                        <iframe src="/uibRepository/layout-grid-document-layout/index.html"
                             style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
                             marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                     </div>
                 </span>
             </div>
             <div class="iframebox6">
-                <span class="text"> <a
-                        href="/uibRepository/uib-interactions-secret-unfolds-Aliramazanian/index.html">article</a>
+                <span class="text"> <a href="/uibRepository/interactions-secret-unfolds/index.html">article</a>
                     <div class="iframe-preview">
-                        <iframe src="/uibRepository/uib-interactions-secret-unfolds-Aliramazanian/index.html"
+                        <iframe src="/uibRepository/interactions-secret-unfolds/index.html"
                             style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
                             marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                     </div>
