--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <div class='menu-button'></div>
             </label>
             <ul class="menu">
-                <li><a href="#skills">skills</a></li>
+                <li><a href="#skills">skills & service</a></li>
                 <li><a href="#portfolio">Portfolio</a> </li>
                 <li><a href="/src/test-resume/resume.html" target="_blank">about me</a>
                 <li><a href="/src/indexcaffee.html" target="_blank">Contact</a> </li>
-                <li><a href="#socialmedia">social media</a></li>
+                <li><a href="#getstart">what you do need</a></li>
             </ul>
         </section>
 
@@ -115,8 +115,8 @@
         </div>
         <div id="headertittle">
             <p class="item-1">My nam is ali</p>
-            <p class="item-2"> i am a new designer and programer</p>
-            <p class="item-3">i am lerning html, css and javascript </p>
+            <p class="item-2"> I am a  new Designer and Programer</p>
+            <p class="item-3">I am lerning html, Css and Javascript </p>
         </div>
         <div class="container5">
             <div class="pic-main-face"> </div>
@@ -139,14 +139,14 @@
 
     </header>
     <div class="middle-page">
-        <h2 class="tittle-middle-page">we've got what you need</h2>
+        <h2 class="tittle-middle-page" >we've got what you need</h2>
         <br>
 
         <div class="underline"></div>
         <br>
         <p class="tittle-middle-page">
-            You need </p><br>
-        <button class="button-middle-page"><a href="/src/serviceanimation.html">get start</a> </button>
+            see package </p><br>
+        <button class="button-middle-page" id="getstart"><a href="/src/serviceanimation.html">get start</a> </button>
     </div>
 
 
@@ -154,7 +154,7 @@
 
     <div class="Curriculum-vitae">
         <div class="items1">
-            <a href="#" id="skills" style="font-size: 3.5rem; font-weight: 700;  text-align: center;">skills</a>
+            <a href="#" id="skills" style="font-size: 3.5rem; font-weight: 700;  text-align: center;">skills & service</a>
         </div>
         <div class="items2">
 
