--- a/src/serviceanimation.html
+++ b/src/serviceanimation.html
@@ -41,15 +41,15 @@
             <i class="fa-brands fa-2xl fa-html5" style="color: rgb(211,88,54) ;"></i>  <span>Html</span><br><br><br>
             <i class="fa-brands fa-2xl fa-css3" style="color: rgb(0,104,186);"></i>  <span>Css</span><br><br><br>
             <i class="fa-brands fa-2xl fa-js" style="color:rgb(203,169,42);"></i>  <span>javascript</span><br>
-            <img src="./asset/Bootstrap_logo.svg.png" style="width: 30px; height: 30px; position: relative; left: 25px; top: 30px;" alt=""><span style="position: relative; left: 25px; top: 25px;">Bootstrap</span>
+            <img class="botstrap-pic" src="/asset/Bootstrap_logo.svg.png" alt=""><span style="position: relative; left: 25px; top: 25px;">Bootstrap</span>
             </section>
             </div>
         <div class="items4"> <h1 style="color: #fff; font-size: 5rem;">SEO</h1>
-            <img src="/asset/seo.jpg" style="width: 200px; height: 150px; position: relative; left: 30px;" alt=""></div>
+            <img  src="/asset/seo.jpg" style="width: 200px; height: 150px; position: relative; left: 30px; " alt=""></div>
     </section>
     <footer>
         <button>
-            <a href="index.html">back to home</a>
+            <a href="index.html">Back to Home</a>
         </button>
     </footer>
 </body>
