--- a/src/indexcaffee.html
+++ b/src/indexcaffee.html
@@ -67,7 +67,7 @@
     </div>
     <footer>
         <button >
-            <a href="index.html">Back to Home</a>
+            <a href="/index.html">Back to Home</a>
         </button >
     </footer>
 </body>
