--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#portfolio">Portfolio</a> </li>
                 <li><a href="/src/test-resume/resume.html" target="_blank">about me</a>
                 <li><a href="/src/indexcaffee.html" target="_blank">Contact</a> </li>
-                <li><a href="#getstart">what you do need</a></li>
+                <li><a href="#getstart">what do you need</a></li>
             </ul>
         </section>
 
@@ -119,7 +119,7 @@
             <p class="item-3">I am lerning html, Css and Javascript </p>
         </div>
         <div class="container5">
-            <div class="pic-main-face"> </div>
+            <div class="pic-main-face">  </div>
             <div class="social-media" id="socialmedia">
 
                 <div class="media-link">
@@ -192,7 +192,7 @@
                 style="font-size: 3.5rem; font-weight: 700; color: #fff; text-decoration: none;">Portfolio</a></h1>
         <div class="main-container">
             <div class="iframebox1">
-                <span class="text"><a href="/uibRepository/frameworks-responsive-bootstrap-webpage/index.html">C.V</a>
+                <span class="text"><a href="/uibRepository/frameworks-responsive-bootstrap-webpage/index.html">training</a>
                     <div class="iframe-preview">
                         <iframe src="/uibRepository/frameworks-responsive-bootstrap-webpage/index.html"
                             style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
@@ -202,7 +202,7 @@
             </div>
             <div class="iframebox2">
                 <span class="text"> <a href="/uibRepository/framework-bootstrap/index.html">
-                        animation</a>
+                    training</a>
                     <div class="iframe-preview">
                         <iframe src="/uibRepository/framework-bootstrap/index.html" style="border:0px #FFFFFF none;"
                             name="test" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px"
@@ -211,7 +211,7 @@
                 </span>
             </div>
             <div class="iframebox3">
-                <span class="text"> <a href="/uibRepository/layout-grid-document-layout/index.html">animation</a>
+                <span class="text"> <a href="/uibRepository/layout-grid-document-layout/index.html">training</a>
 
 
                     <div class="iframe-preview">
@@ -222,12 +222,13 @@
                 </span>
             </div>
             <div class="iframebox6">
-                <span class="text"> <a href="/uibRepository/interactions-secret-unfolds/index.html">article</a>
+                <span class="text"> <a href="/uibRepository/interactions-secret-unfolds/index.html">training</a>
                     <div class="iframe-preview">
                         <iframe src="/uibRepository/interactions-secret-unfolds/index.html"
                             style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0"
                             marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                     </div>
+                    
                 </span>
             </div>
         </div>
